infrastructure/traefik-config/traefik-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dashboard.private.superkooka.com`) && PathPrefix(`/traefik`)
      kind: Rule
      middlewares:
        - name: basic-auth
          namespace: kube-system
        - name: replacepath-traefik-ui
          namespace: kube-system
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: traefik-tls
